kubernetes/apps/dev/forgejo/app/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: forgejo-ssh-proxy
spec:
  proxyProtocol:
    version: V2
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      name: forgejo-ssh
  tcpKeepalive: {}
