kubernetes/apps/dev/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - git.bjw-s.dev
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - method: GET
          path:
            type: Exact
            value: /user/login
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /user/oauth2/kanidm
            port: 443
            statusCode: 302
    - backendRefs:
        - name: forgejo-anubis
          port: 8080
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
